# python-cpp-binding

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test_binding.py
bindings/: CMakeLists.txt  pybind_module.cpp
corelink/: __init__.py
corelink_sample_binding/: __init__.py
include/: hello_world.hpp  person.h
src/: CMakeLists.txt  hello_world.cpp  person.cpp
test/: test.py
